# picnic-topic-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
notebook/: zero_shot_classification.ipynb
picnic_topic_prediction/: config.py  eval.py  hp_tuning.py  param_grid.yaml  train.py  utils.py
src/picnic_topic_prediction/: config.py  train.py  utils.py
