[project]
name = "picnic-topic-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.0",
    "nltk==3.9.2",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "pandas>=2.3.3",
    "pip>=25.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
]
